# ed-webhook

./: Dockerfile  MANIFEST.in  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: package.py
src/ed_webhook/common/: generic_helpers.py
src/ed_webhook/documentation/api/: abc_optimization_api_client.py  optimization_api_client.py  optimization_endpoint_descriptions.py
src/ed_webhook/documentation/message_queue/rabbitmq/: abc_optimization_rabbitmq_subscriber.py  optimization_queue_descriptions.py  optimization_rabbitmq_subscriber.py
