[tool.poetry]
name = "ed-webhook"
version = "0.1.9"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
jsons = "^1.6.3"
ed-domain = "0.5.3"
ed-infrastructure = "^0.3.33"
asyncio = "^3.4.3"
requests = "^2.32.3"
twine = "^6.1.0"
faststream = {extras = ["rabbit"], version = "^0.5.42"}
psycopg = "^3.2.9"
aiohttp = "^3.12.11"
ed-core = "^0.2.38"
aio-pika = "^9.5.5"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
